# minimal-ml-cicd

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.github/workflows/: issues.yml  pylint.yml
conf/: process_data.yaml
src/: prepare_data.py
src/ml/: __init__.py  retrieve_data.py
src/ml/utils/: eda.py
src/test/test_ml/: test_retrieve_data.py
src/test/test_train_model/: test_retrieve_data.py
src/train_model/: __init__.py  data_cleaner.py  data_model.py  data_preprocessor.py  evaluator.py  retrieve_data.py
src/train_model/models/: __init__.py  predictor.py
src/train_model/tests/: __init__.py  test_data_clean.py  test_data_preprocessor.py  test_evaluator.py  test_models.py  test_utils.py
src/train_model/utils/: __init__.py  eda.py  utils.py
tests/: __init__.py
