[project]
name = "minimal-ml-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
]

[project.optional-dependencies]
eda = [
    "ipykernel>=6.29.5",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
